# stm32f303k8

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
examples/: adc.rs  delay.rs  gpio.rs  i2c.rs  pwm.rs  spi.rs  timer.rs  uart.rs  uart_dma.rs  wdt.rs
src/: main.rs
